fix: revert "support design tokens in `::selection`"
This reverts commit fb62efec0a5681efdf8d142d25a6ecbdecb23cf8.

Unfortunately the following code makes the user selection invisible:

```
::selection {
    --color: red;
}
```

Somehow, only having a custom property, breaks `background-color` and
`color`. This totally works:

```
::selection {
    --color: red;
    background-color: Highlight;
    color: HighlightText;
}
```

However, the following would not be our intention:

```
.utrecht-theme,
.utrecht-theme ::selection {
    --color: red;
    background-color: Highlight;
    color: HighlightText;
}
```

Perhaps we could do the following, but I doubt it would be worth the complexity.

```
.utrecht-theme,
.utrecht-theme ::selection {
    --color: red;
}

.utrecht-theme ::selection {
    background-color: Highlight;
    color: HighlightText;
}
```

--- a/proprietary/design-tokens/src/background-image-icon.scss
+++ b/proprietary/design-tokens/src/background-image-icon.scss
@@ -5,8 +5,7 @@
  */
 
 .utrecht-theme,
-.utrecht-theme ::backdrop,
-.utrecht-theme ::selection {
+.utrecht-theme ::backdrop {
   --utrecht-menulijst-item-background-image: url("./pijltje.svg");
   --utrecht-link-icon-left-background-image: url("./pijltje.svg");
   --utrecht-search-bar-input-background-image: url("./icoon-zoek-rood.svg");
